
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct TYPE_2__ {int s_addr; } ;
struct sockaddr_in {TYPE_1__ sin_addr; int sin_port; int sin_family; } ;
struct sockaddr {int dummy; } ;
typedef int sock_a ;
typedef int fd_set ;


 int AF_INET ;
 int IPPROTO_TCP ;
 int SOCK_STREAM ;
 scalar_t__ connect (int,struct sockaddr*,int) ;
 int exit (int) ;
 int fprintf (int ,char*,char*,int) ;
 int herror (char*) ;
 int htons (int) ;
 int resolve (char*) ;
 int socket (int ,int ,int ) ;
 int stderr ;

int isock(char *hostname, int portnum)
{
 struct sockaddr_in sock_a;
 int num, sock;
 unsigned int ip;
 fd_set input;

 sock_a.sin_family = AF_INET;
 sock_a.sin_port = htons(portnum);
 sock_a.sin_addr.s_addr = resolve(hostname);

 if ((sock = socket(AF_INET, SOCK_STREAM, IPPROTO_TCP)) < 0)
 {
  herror("[!] accept");
  exit(-1);
 }

 if (connect(sock, (struct sockaddr *)&sock_a, sizeof(sock_a)))
 {
  herror("[!] connect");
  exit(-1);
 }

 fprintf(stderr, "[*] Connected to %s:%d\n", hostname, portnum);
 return(sock);

}
